--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@ $(function() {
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </div>
     </div>
-    <div class="featured_box"><a href="#"><img src="images/paint" alt="" /></a>
+    <div class="featured_box"><a href="#"><img src="./images/paint" alt="" /></a>
       <div class="floater">
         <h2>4. Live Painting</h2>
         <p>Join John Doe and Mary Jane for a live demonstration of painting. Learn various techniques as well as the process of painting. Q and A will be held at the end and will be answered at the artists discretion during the painting. Held at the Art Gallery at 04/24/2017 at 4:00 pm.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </div>
     </div>
-    <div class="featured_box"><a href="#"><img src="images/yale" alt="" /></a>
+    <div class="featured_box"><a href="#"><img src="./images/yale" alt="" /></a>
       <div class="floater">
         <h2>5. Campus Tours</h2>
         <p>Campus Tours are currently being held. For more details and where to register refer to link below.</p>
@@ -111,7 +111,7 @@ $(function() {
         <ul>
           <li>
             <h2>Important News</h2>
-            <div class="imgholder"><img src="images/news" alt="" /></div>
+            <div class="imgholder"><img src="./images/news" alt="" /></div>
             <p>Good Friday 04/14/2017- School Closed.</p>
             <p>Easter Sunday 04/17/2016.</p>
             <p>Finals Exam Schedule Out.</p>
@@ -119,7 +119,7 @@ $(function() {
           </li>
           <li class="last">
             <h2>Upcoming Events</h2>
-            <div class="imgholder"><img src="images/event" alt="" /></div>
+            <div class="imgholder"><img src="./images/event" alt="" /></div>
             <p>Baseball: Yale vs Harvard : 04/18/2017.</p>
             <p>New Exhibit Opening in the Art Gallery.</p>
             <p>Refer to Link for more open seminars and workshops.</p>
@@ -133,7 +133,7 @@ $(function() {
       <h2>Monthly Calendar</h2>
       <ul>
         <li>
-          <div class="imgholder"><a href="#"><img src="images/calendar" alt="" /></a></div>
+          <div class="imgholder"><a href="#"><img src="./images/calendar" alt="" /></a></div>
           <p><strong><a href="#">Calendar</a></strong></p>
           <p>Interested in learning about past or future events being held at Yale and the Art School? Refer to the link above!</p>
         </li>
