--- a/index.html
+++ b/index.html
@@ -66,35 +66,35 @@ $(function() {
 <!-- ####################################################################################################### -->
 <div class="wrapper col2">
   <div id="featured_slide">
-    <div class="featured_box"><a href="#"><img src="images/bucket" alt="" /></a>
+    <div class="featured_box"><a href="#"><img src="images/bucket.jpg" alt="" /></a>
       <div class="floater">
         <h2>1. BucketMan</h2>
         <p>Seminar that discusses a students endeavors in his experiment to wear a bucket for one week. Event will be held in the art gallery at 07/09/2017 at 11:00 pm. Drinks and food wil be provided.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </div>
     </div>
-    <div class="featured_box"><a href="#"><img src="images/gallery" alt="" /></a>
+    <div class="featured_box"><a href="#"><img src="images/gallery.jpg" alt="" /></a>
       <div class="floater">
         <h2>2. Gallery Opening</h2>
         <p>Art Gallery will open its doors starting 03/21/2017.New hours: Monday - Thursday from 8:00 am to 5:00 pm. Friday - Sunday from 11:00 am - 4:00 pm.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </div>
     </div>
-    <div class="featured_box"><a href="#"><img src="images/logo" alt="" /></a>
+    <div class="featured_box"><a href="#"><img src="images/logo.png" alt="" /></a>
       <div class="floater">
         <h2>3. Interested in enrolling?</h2>
         <p>Application deadline for Spring 2018 is at 05/17/2017. Refer to Link for more details.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </div>
     </div>
-    <div class="featured_box"><a href="#"><img src="./images/paint" alt="" /></a>
+    <div class="featured_box"><a href="#"><img src="./images/paint.jpg" alt="" /></a>
       <div class="floater">
         <h2>4. Live Painting</h2>
         <p>Join John Doe and Mary Jane for a live demonstration of painting. Learn various techniques as well as the process of painting. Q and A will be held at the end and will be answered at the artists discretion during the painting. Held at the Art Gallery at 04/24/2017 at 4:00 pm.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </div>
     </div>
-    <div class="featured_box"><a href="#"><img src="./images/yale" alt="" /></a>
+    <div class="featured_box"><a href="#"><img src="./images/yale.jpg" alt="" /></a>
       <div class="floater">
         <h2>5. Campus Tours</h2>
         <p>Campus Tours are currently being held. For more details and where to register refer to link below.</p>
@@ -111,7 +111,7 @@ $(function() {
         <ul>
           <li>
             <h2>Important News</h2>
-            <div class="imgholder"><img src="./images/news" alt="" /></div>
+            <div class="imgholder"><img src="./images/news.png" alt="" /></div>
             <p>Good Friday 04/14/2017- School Closed.</p>
             <p>Easter Sunday 04/17/2016.</p>
             <p>Finals Exam Schedule Out.</p>
@@ -119,7 +119,7 @@ $(function() {
           </li>
           <li class="last">
             <h2>Upcoming Events</h2>
-            <div class="imgholder"><img src="./images/event" alt="" /></div>
+            <div class="imgholder"><img src="./images/event.png" alt="" /></div>
             <p>Baseball: Yale vs Harvard : 04/18/2017.</p>
             <p>New Exhibit Opening in the Art Gallery.</p>
             <p>Refer to Link for more open seminars and workshops.</p>
@@ -133,7 +133,7 @@ $(function() {
       <h2>Monthly Calendar</h2>
       <ul>
         <li>
-          <div class="imgholder"><a href="#"><img src="./images/calendar" alt="" /></a></div>
+          <div class="imgholder"><a href="#"><img src="./images/calendar.png" alt="" /></a></div>
           <p><strong><a href="#">Calendar</a></strong></p>
           <p>Interested in learning about past or future events being held at Yale and the Art School? Refer to the link above!</p>
         </li>
